--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crowdfunding",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Starchild-1337.github.io/crowdfunding",
+  "homepage": "https://Starchild-1337.github.io/Crowdfunding",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
